@@ -20,6 +20,13 @@ We're putting vst's `Inputs` and (a wrapper of) jack's `Port<AudioIn>` behind a 
 The idea is that we're putting vst's API and the jack API behind a common interface.
 Client code then only needs to know about that common interface to support both.
 The `render_next` method in the `Renderable` trait takes arguments of a generic type that
-implements the common traits. 
+implements the common traits.
+Also the `render_next` method from the `Synth` struct takes arguments of generic types.
+
+2018-10-14: In the test_synth: no longer put `position` inside a `Cell`.
+
+2018-10-14: Add an extra parameter `SynthData` to the `render_next` method in the `Renderable` trait.
+The idea is that this can be used for synth-wide data that does not need to be duplicated
+per voice, e.g. the samplerate.
 
 Still work in progress.
